2007-04-11  Alexander Larsson  <alexl@redhat.com>

	* Makefile.am (INCLUDES): 
	* xdg-user-dir-lookup.c:
	Allow xdg-user-dir-lookup.c to be included without modifications
	Define STANDALONE_XDG_USER_DIR_LOOKUP to include main

2007-04-11  Alexander Larsson  <alexl@redhat.com>

	* xdg-user-dirs-update.c (create_dirs):
	Print out correct directory on --force

=== xdg-user-dirs 0.5 ===

2007-03-26  Alexander Larsson  <alexl@redhat.com>

	* NEWS: 
	* configure.ac:
	Release 0.5 (new translations)	

2007-03-08  Alexander Larsson  <alexl@redhat.com>

	* configure.ac: 
	* xdg-user-dirs-update.c:
	Get the right declaration of iconv to avoid warnings.

=== xdg-user-dirs 0.4 ===

2007-03-07  Alexander Larsson  <alexl@redhat.com>

	* configure.ac:
	Bump version to 0.4

	* NEWS:
	Update for release.

2007-03-07  Alexander Larsson  <alexl@redhat.com>

	* Makefile.am (libraries):
	Add LIBINTL to libraries (reported by Daniel Macks)

=== xdg-user-dirs 0.3 ===

2007-03-01  Alexander Larsson  <alexl@redhat.com>

	* configure.ac:
	Bump version to 0.3
	
	* NEWS:
	Update for release

	* xdg-user-dirs-update.c:
	mkdir ~/.config if needed

2007-03-01  Alexander Larsson  <alexl@redhat.com>

	* configure.ac:
	Add AM_PROG_MKDIR_P	

2007-03-01  Alexander Larsson  <alexl@redhat.com>

	* AUTHORS:
	Add myself

2007-03-01  Alexander Larsson  <alexl@redhat.com>

	* autogen.sh:
	Require automake 1.9

=== xdg-user-dirs 0.2 ===

2007-03-01  Alexander Larsson  <alexl@redhat.com>

	* Makefile.am:
	Add xdg-user-dir to EXTRA_DIST

	* configure.ac:
	Bump to 0.2

	* NEWS:
	Update for release

2007-03-01  Alexander Larsson  <alexl@redhat.com>

	* xdg-user-dirs-update.c (save_user_dirs):
	Use atomic rename-over-target when saving
	user-dirs.dirs.

2007-02-28  Alexander Larsson  <alexl@redhat.com>

	* Makefile.am:
	Handle xdg-user-dir as script, not program.
	
	* xdg-user-dirs-update.c:
	Fix warnings

=== xdg-user-dirs 0.1 ===

2007-02-28  Alexander Larsson  <alexl@redhat.com>

	* NEWS:
	Update for release
